--- a/m5-dial.yaml
+++ b/m5-dial.yaml
@@ -11,6 +11,10 @@ substitutions:
   room_icon_living: "\U000F0502"
   room_icon_bedroom: "\U000F0FD3"
   room_icon_kid: "\U000F106E"
+  # Mode Icons
+  mode_icon_heat: "\U000F0238"
+  mode_icon_cool: "\U000F0717"
+  mode_icon_dry: "\U000F058E"
 
 esphome:
   name: ${name}
@@ -293,6 +297,10 @@ font:
     id: icon_font_small
     size: 28
     glyphs: ["${room_icon_living}", "${weather_icon_sun}", "${weather_icon_cloud}", "${weather_icon_rain}", "${weather_icon_snow}", "${weather_icon_night}"]
+  - file: "fonts/materialdesignicons-webfont.ttf"
+    id: icon_font_mode
+    size: 24
+    glyphs: ["${mode_icon_heat}", "${mode_icon_cool}", "${mode_icon_dry}"]
 
 script:
   - id: refresh_room_ui
@@ -463,7 +471,7 @@ lvgl:
         width: 240
         height: 100
         align: CENTER
-        y: -5
+        y: -7
         bg_opa: 0
         border_width: 0
         pad_all: 0
@@ -472,7 +480,7 @@ lvgl:
           flex_flow: COLUMN      # Stack Main Temp over the Room/Outside Row
           flex_align_main: CENTER
           flex_align_cross: CENTER
-          pad_row: 0
+          pad_row: -10
         widgets:
           # 1. Main Target Temperature
           - label:
@@ -490,6 +498,7 @@ lvgl:
               pad_all: 0
               bg_opa: 0
               border_width: 0
+              y: 0
               widgets:
                 # Room/Outside Temperature (centered)
                 - label:
@@ -510,4 +519,50 @@ lvgl:
                     text_color: 0xFFFFFF
                     align: RIGHT_MID
                     x: -5
+
+    # --- BOTTOM ROW (Modes) ---
+    - obj:
+        width: 240
+        height: 80
+        align: BOTTOM_MID
+        y: -15
+        bg_opa: 0
+        border_width: 0
+        layout:
+          type: flex
+          flex_flow: ROW
+          flex_align_main: CENTER
+          flex_align_cross: CENTER
+          pad_column: 20
+        widgets:
+          # Heating (Red)
+          - button:
+              width: 50
+              height: 50
+              bg_opa: 0
+              border_width: 2
+              border_color: 0xF44336
+              radius: 25
+              widgets:
+                - label: {text: "${mode_icon_heat}", align: CENTER, text_font: icon_font_mode, text_color: 0xF44336}
+          # Cooling (Blue)
+          - button:
+              width: 50
+              height: 50
+              bg_opa: 0
+              border_width: 2
+              border_color: 0x2196F3
+              radius: 25
+              widgets:
+                - label: {text: "${mode_icon_cool}", align: CENTER, text_font: icon_font_mode, text_color: 0x2196F3}
+          # Dry (Green)
+          - button:
+              width: 50
+              height: 50
+              bg_opa: 0
+              border_width: 2
+              border_color: 0x4CAF50
+              radius: 25
+              widgets:
+                - label: {text: "${mode_icon_dry}", align: CENTER, text_font: icon_font_mode, text_color: 0x4CAF50}
                     
