--- a/m5-dial.yaml
+++ b/m5-dial.yaml
@@ -184,6 +184,18 @@ globals:
     type: bool
     initial_value: 'true'
 
+interval:
+  - interval: 50ms
+    then:
+      - lambda: |-
+          if (!id(screen_is_on)) return;
+          // Breathing animation: varies width between ~10 and ~26
+          int width = 18 + 8 * sin(millis() / 5000.0);
+          
+          lv_obj_set_style_shadow_width(id(lbl_mode_heat), width, LV_PART_MAIN);
+          lv_obj_set_style_shadow_width(id(lbl_mode_cool), width, LV_PART_MAIN);
+          lv_obj_set_style_shadow_width(id(lbl_mode_dry), width, LV_PART_MAIN);
+
 sensor:
   - platform: homeassistant
     id: ha_temp_bedroom
@@ -544,7 +556,15 @@ lvgl:
               border_color: 0xF44336
               radius: 25
               widgets:
-                - label: {text: "${mode_icon_heat}", align: CENTER, text_font: icon_font_mode, text_color: 0xF44336}
+                - label:
+                    id: lbl_mode_heat
+                    text: "${mode_icon_heat}"
+                    align: CENTER
+                    text_font: icon_font_mode
+                    text_color: 0xF44336
+                    shadow_width: 15
+                    shadow_color: 0xF44336
+                    shadow_opa: 1.0
           # Cooling (Blue)
           - button:
               width: 50
@@ -554,7 +574,15 @@ lvgl:
               border_color: 0x2196F3
               radius: 25
               widgets:
-                - label: {text: "${mode_icon_cool}", align: CENTER, text_font: icon_font_mode, text_color: 0x2196F3}
+                - label:
+                    id: lbl_mode_cool
+                    text: "${mode_icon_cool}"
+                    align: CENTER
+                    text_font: icon_font_mode
+                    text_color: 0x2196F3
+                    shadow_width: 15
+                    shadow_color: 0x2196F3
+                    shadow_opa: 1.0
           # Dry (Green)
           - button:
               width: 50
@@ -564,5 +592,13 @@ lvgl:
               border_color: 0x4CAF50
               radius: 25
               widgets:
-                - label: {text: "${mode_icon_dry}", align: CENTER, text_font: icon_font_mode, text_color: 0x4CAF50}
+                - label:
+                    id: lbl_mode_dry
+                    text: "${mode_icon_dry}"
+                    align: CENTER
+                    text_font: icon_font_mode
+                    text_color: 0x4CAF50
+                    shadow_width: 15
+                    shadow_color: 0x4CAF50
+                    shadow_opa: 1.0
                     
